# ex_webp

./: README.md  checksum-Elixir.ExWebp.exs  mix.exs  release.sh
.github/workflows/: release.yml
config/: dev.exs
lib/: ex_webp.ex
native/ex_webp/: Cargo.toml
native/ex_webp/src/: lib.rs  shared.rs
test/: ex_webp_test.exs
