[package]
name = "ex_webp"
version = "0.1.3"
authors = []
edition = "2021"

[lib]
name = "ex_webp"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
img = []

[dependencies]
image = "0.25.6"
libwebp-sys = "0.9.3"
rustler = { version = "0.36.2", default-features = false, features = [
    "derive",
    "nif_version_2_15",
] }
webp = "0.3"

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
strip = "debuginfo"
